--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -26,7 +26,7 @@ DOMAIN-SUFFIX,cn,ChinaProxy
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-05-14 23:05:17
+// updated on 2016-05-22 13:32:04
 
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,syndication,REJECT
@@ -230,7 +230,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 
 // white list from dnsmasq_china_list!
-// updated on 2016-05-14 23:05:29
+// updated on 2016-05-22 13:32:19
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -803,6 +803,7 @@ DOMAIN-SUFFIX,1001g.com,ChinaProxy
 DOMAIN-SUFFIX,1001p.com,ChinaProxy
 DOMAIN-SUFFIX,100580.com,ChinaProxy
 DOMAIN-SUFFIX,1006.tv,ChinaProxy
+DOMAIN-SUFFIX,10086api.com,ChinaProxy
 DOMAIN-SUFFIX,10086web.com,ChinaProxy
 DOMAIN-SUFFIX,100afrc.com,ChinaProxy
 DOMAIN-SUFFIX,100allin.com,ChinaProxy
@@ -963,6 +964,7 @@ DOMAIN-SUFFIX,114best.com,ChinaProxy
 DOMAIN-SUFFIX,114cbd.com,ChinaProxy
 DOMAIN-SUFFIX,114chn.com,ChinaProxy
 DOMAIN-SUFFIX,114cnbaiducom.com,ChinaProxy
+DOMAIN-SUFFIX,114desk.com,ChinaProxy
 DOMAIN-SUFFIX,114dg.com,ChinaProxy
 DOMAIN-SUFFIX,114dhc.com,ChinaProxy
 DOMAIN-SUFFIX,114dns.com,ChinaProxy
@@ -1118,6 +1120,7 @@ DOMAIN-SUFFIX,125uu.com,ChinaProxy
 DOMAIN-SUFFIX,125y.com,ChinaProxy
 DOMAIN-SUFFIX,126.am,ChinaProxy
 DOMAIN-SUFFIX,126.com,ChinaProxy
+DOMAIN-SUFFIX,126.fm,ChinaProxy
 DOMAIN-SUFFIX,126.la,ChinaProxy
 DOMAIN-SUFFIX,126.net,ChinaProxy
 DOMAIN-SUFFIX,126disk.com,ChinaProxy
@@ -4754,6 +4757,7 @@ DOMAIN-SUFFIX,88liu.com,ChinaProxy
 DOMAIN-SUFFIX,88meishi.com,ChinaProxy
 DOMAIN-SUFFIX,88mf.com,ChinaProxy
 DOMAIN-SUFFIX,88mmmoney.com,ChinaProxy
+DOMAIN-SUFFIX,88mob.com,ChinaProxy
 DOMAIN-SUFFIX,88pets.com,ChinaProxy
 DOMAIN-SUFFIX,88rpg.net,ChinaProxy
 DOMAIN-SUFFIX,88tang.com,ChinaProxy
@@ -6570,6 +6574,7 @@ DOMAIN-SUFFIX,atv.ac,ChinaProxy
 DOMAIN-SUFFIX,atwtech.net,ChinaProxy
 DOMAIN-SUFFIX,auak.com,ChinaProxy
 DOMAIN-SUFFIX,aubdas.com,ChinaProxy
+DOMAIN-SUFFIX,aucanlink.com,ChinaProxy
 DOMAIN-SUFFIX,auctionaa.com,ChinaProxy
 DOMAIN-SUFFIX,audiobar.net,ChinaProxy
 DOMAIN-SUFFIX,audiocn.com,ChinaProxy
@@ -6691,6 +6696,7 @@ DOMAIN-SUFFIX,azyx.com,ChinaProxy
 DOMAIN-SUFFIX,chem.com,ChinaProxy
 DOMAIN-SUFFIX,fairy.com,ChinaProxy
 DOMAIN-SUFFIX,tea.com,ChinaProxy
+DOMAIN-SUFFIX,b086.com,ChinaProxy
 DOMAIN-SUFFIX,b181.com,ChinaProxy
 DOMAIN-SUFFIX,builder.com,ChinaProxy
 DOMAIN-SUFFIX,b2b110.com,ChinaProxy
@@ -9681,6 +9687,7 @@ DOMAIN-SUFFIX,cindasc.com,ChinaProxy
 DOMAIN-SUFFIX,cindasoft.com,ChinaProxy
 DOMAIN-SUFFIX,cineseitalia.com,ChinaProxy
 DOMAIN-SUFFIX,ciniao.me,ChinaProxy
+DOMAIN-SUFFIX,cinwell.com,ChinaProxy
 DOMAIN-SUFFIX,value.com,ChinaProxy
 DOMAIN-SUFFIX,cio360.net,ChinaProxy
 DOMAIN-SUFFIX,cio6.com,ChinaProxy
@@ -11708,6 +11715,7 @@ DOMAIN-SUFFIX,ditiewang.net,ChinaProxy
 DOMAIN-SUFFIX,ditiezu.com,ChinaProxy
 DOMAIN-SUFFIX,ditu.live,ChinaProxy
 DOMAIN-SUFFIX,ditu100.net,ChinaProxy
+DOMAIN-SUFFIX,ditu6.com,ChinaProxy
 DOMAIN-SUFFIX,dituge.com,ChinaProxy
 DOMAIN-SUFFIX,dituhui.com,ChinaProxy
 DOMAIN-SUFFIX,dituigo.com,ChinaProxy
@@ -12069,6 +12077,7 @@ DOMAIN-SUFFIX,doudouxitong.com,ChinaProxy
 DOMAIN-SUFFIX,doudouxitong.net,ChinaProxy
 DOMAIN-SUFFIX,doudouyin.com,ChinaProxy
 DOMAIN-SUFFIX,doudouyuedu.com,ChinaProxy
+DOMAIN-SUFFIX,doufl.com,ChinaProxy
 DOMAIN-SUFFIX,douglassclub.com,ChinaProxy
 DOMAIN-SUFFIX,douguo.com,ChinaProxy
 DOMAIN-SUFFIX,douguo.net,ChinaProxy
@@ -13062,6 +13071,7 @@ DOMAIN-SUFFIX,exdoll.com,ChinaProxy
 DOMAIN-SUFFIX,exhera.com,ChinaProxy
 DOMAIN-SUFFIX,exiaoba.com,ChinaProxy
 DOMAIN-SUFFIX,exmail.com,ChinaProxy
+DOMAIN-SUFFIX,exmrw.com,ChinaProxy
 DOMAIN-SUFFIX,mk.com,ChinaProxy
 DOMAIN-SUFFIX,exotxt.com,ChinaProxy
 DOMAIN-SUFFIX,expai.com,ChinaProxy
@@ -13212,6 +13222,7 @@ DOMAIN-SUFFIX,fangyou.com,ChinaProxy
 DOMAIN-SUFFIX,fangyouquan.com,ChinaProxy
 DOMAIN-SUFFIX,fangyuan365.com,ChinaProxy
 DOMAIN-SUFFIX,fangyunlin.com,ChinaProxy
+DOMAIN-SUFFIX,sz.com,ChinaProxy
 DOMAIN-SUFFIX,fangzhounet.com,ChinaProxy
 DOMAIN-SUFFIX,fangzhur.com,ChinaProxy
 DOMAIN-SUFFIX,fanhcy.com,ChinaProxy
@@ -14499,6 +14510,7 @@ DOMAIN-SUFFIX,goodapp.net,ChinaProxy
 DOMAIN-SUFFIX,goodbaby.com,ChinaProxy
 DOMAIN-SUFFIX,goodbabygroup.com,ChinaProxy
 DOMAIN-SUFFIX,goodgupiao.com,ChinaProxy
+DOMAIN-SUFFIX,goodid.com,ChinaProxy
 DOMAIN-SUFFIX,goodjili.com,ChinaProxy
 DOMAIN-SUFFIX,goodjzjg.com,ChinaProxy
 DOMAIN-SUFFIX,goodnic.net,ChinaProxy
@@ -16962,6 +16974,7 @@ DOMAIN-SUFFIX,ihdt.tv,ChinaProxy
 DOMAIN-SUFFIX,ihei5.com,ChinaProxy
 DOMAIN-SUFFIX,iheidou.com,ChinaProxy
 DOMAIN-SUFFIX,iheima.com,ChinaProxy
+DOMAIN-SUFFIX,iheima.net,ChinaProxy
 DOMAIN-SUFFIX,ihengheng.com,ChinaProxy
 DOMAIN-SUFFIX,ihetou.com,ChinaProxy
 DOMAIN-SUFFIX,ihezhu.com,ChinaProxy
@@ -17029,6 +17042,7 @@ DOMAIN-SUFFIX,ijq.tv,ChinaProxy
 DOMAIN-SUFFIX,ijsp.net,ChinaProxy
 DOMAIN-SUFFIX,ijuer.com,ChinaProxy
 DOMAIN-SUFFIX,ijunhai.com,ChinaProxy
+DOMAIN-SUFFIX,ijustrun.com,ChinaProxy
 DOMAIN-SUFFIX,ik123.com,ChinaProxy
 DOMAIN-SUFFIX,ik6.com,ChinaProxy
 DOMAIN-SUFFIX,ikafan.com,ChinaProxy
@@ -20272,6 +20286,8 @@ DOMAIN-SUFFIX,liketuan.com,ChinaProxy
 DOMAIN-SUFFIX,lilianxiang.com,ChinaProxy
 DOMAIN-SUFFIX,lilslb.com,ChinaProxy
 DOMAIN-SUFFIX,liluping.com,ChinaProxy
+DOMAIN-SUFFIX,collection.com,ChinaProxy
+DOMAIN-SUFFIX,lilysamericandiner.com,ChinaProxy
 DOMAIN-SUFFIX,lilyst.com,ChinaProxy
 DOMAIN-SUFFIX,limax.com,ChinaProxy
 DOMAIN-SUFFIX,nova.com,ChinaProxy
@@ -21694,6 +21710,8 @@ DOMAIN-SUFFIX,mingyuege.com,ChinaProxy
 DOMAIN-SUFFIX,minhangshi.com,ChinaProxy
 DOMAIN-SUFFIX,4wd.net,ChinaProxy
 DOMAIN-SUFFIX,audio.com,ChinaProxy
+DOMAIN-SUFFIX,1.opera,ChinaProxy
+DOMAIN-SUFFIX,mini5cn.opera,ChinaProxy
 DOMAIN-SUFFIX,mini88s.com,ChinaProxy
 DOMAIN-SUFFIX,minicc.com,ChinaProxy
 DOMAIN-SUFFIX,minidaxue.com,ChinaProxy
@@ -25361,6 +25379,7 @@ DOMAIN-SUFFIX,sccsfxdq.com,ChinaProxy
 DOMAIN-SUFFIX,scdng.com,ChinaProxy
 DOMAIN-SUFFIX,scfzbs.com,ChinaProxy
 DOMAIN-SUFFIX,schiy.com,ChinaProxy
+DOMAIN-SUFFIX,scholat.com,ChinaProxy
 DOMAIN-SUFFIX,schoolgater.com,ChinaProxy
 DOMAIN-SUFFIX,schrb.com,ChinaProxy
 DOMAIN-SUFFIX,sci99.com,ChinaProxy
@@ -26685,6 +26704,7 @@ DOMAIN-SUFFIX,spcc.mobi,ChinaProxy
 DOMAIN-SUFFIX,spdex.com,ChinaProxy
 DOMAIN-SUFFIX,spdiy.com,ChinaProxy
 DOMAIN-SUFFIX,spdiy.net,ChinaProxy
+DOMAIN-SUFFIX,spdydns.com,ChinaProxy
 DOMAIN-SUFFIX,speedtest.xboxlive,ChinaProxy
 DOMAIN-SUFFIX,speedycloud.cc,ChinaProxy
 DOMAIN-SUFFIX,speiyou.com,ChinaProxy
@@ -27154,6 +27174,7 @@ DOMAIN-SUFFIX,syxwmy.com,ChinaProxy
 DOMAIN-SUFFIX,syy.me,ChinaProxy
 DOMAIN-SUFFIX,syys8.com,ChinaProxy
 DOMAIN-SUFFIX,syyx.com,ChinaProxy
+DOMAIN-SUFFIX,acc.com,ChinaProxy
 DOMAIN-SUFFIX,dns.net,ChinaProxy
 DOMAIN-SUFFIX,yongping.com,ChinaProxy
 DOMAIN-SUFFIX,sz1001.net,ChinaProxy
@@ -27262,6 +27283,7 @@ DOMAIN-SUFFIX,nvlang.com,ChinaProxy
 DOMAIN-SUFFIX,t.im,ChinaProxy
 DOMAIN-SUFFIX,t.tt,ChinaProxy
 DOMAIN-SUFFIX,t00y.com,ChinaProxy
+DOMAIN-SUFFIX,t086.com,ChinaProxy
 DOMAIN-SUFFIX,t105.com,ChinaProxy
 DOMAIN-SUFFIX,t1y4.com,ChinaProxy
 DOMAIN-SUFFIX,t1y5.com,ChinaProxy
@@ -29628,6 +29650,7 @@ DOMAIN-SUFFIX,wed027.com,ChinaProxy
 DOMAIN-SUFFIX,wed6.com,ChinaProxy
 DOMAIN-SUFFIX,wedai.net,ChinaProxy
 DOMAIN-SUFFIX,wedalian.com,ChinaProxy
+DOMAIN-SUFFIX,wedcable.com,ChinaProxy
 DOMAIN-SUFFIX,dresses.ca,ChinaProxy
 DOMAIN-SUFFIX,wedding86.com,ChinaProxy
 DOMAIN-SUFFIX,weddingos.com,ChinaProxy
@@ -29747,6 +29770,7 @@ DOMAIN-SUFFIX,weixiaodian.com,ChinaProxy
 DOMAIN-SUFFIX,weixiaoduo.com,ChinaProxy
 DOMAIN-SUFFIX,weixiaohan.com,ChinaProxy
 DOMAIN-SUFFIX,weixiaoxin.com,ChinaProxy
+DOMAIN-SUFFIX,weixiaoyan.com,ChinaProxy
 DOMAIN-SUFFIX,weixin.com,ChinaProxy
 DOMAIN-SUFFIX,weixin111.com,ChinaProxy
 DOMAIN-SUFFIX,weixinbang.com,ChinaProxy
@@ -31504,6 +31528,7 @@ DOMAIN-SUFFIX,xuhot.com,ChinaProxy
 DOMAIN-SUFFIX,xuitu.com,ChinaProxy
 DOMAIN-SUFFIX,xukailun.me,ChinaProxy
 DOMAIN-SUFFIX,xukuang.review,ChinaProxy
+DOMAIN-SUFFIX,xun.me,ChinaProxy
 DOMAIN-SUFFIX,xunbaozhifu.com,ChinaProxy
 DOMAIN-SUFFIX,xunbin.com,ChinaProxy
 DOMAIN-SUFFIX,xunbo.cc,ChinaProxy
@@ -33162,6 +33187,7 @@ DOMAIN-SUFFIX,zdfans.com,ChinaProxy
 DOMAIN-SUFFIX,zdic.net,ChinaProxy
 DOMAIN-SUFFIX,zdlife.com,ChinaProxy
 DOMAIN-SUFFIX,zdmimg.com,ChinaProxy
+DOMAIN-SUFFIX,zdmimg.xyz,ChinaProxy
 DOMAIN-SUFFIX,zdnscloud.biz,ChinaProxy
 DOMAIN-SUFFIX,zdnscloud.com,ChinaProxy
 DOMAIN-SUFFIX,zdnscloud.info,ChinaProxy
@@ -34058,6 +34084,7 @@ DOMAIN-SUFFIX,ztautoparts.com,ChinaProxy
 DOMAIN-SUFFIX,ztbest.com,ChinaProxy
 DOMAIN-SUFFIX,ztcadx.com,ChinaProxy
 DOMAIN-SUFFIX,ztehn.com,ChinaProxy
+DOMAIN-SUFFIX,ztemap.com,ChinaProxy
 DOMAIN-SUFFIX,ztems.com,ChinaProxy
 DOMAIN-SUFFIX,ztfans.com,ChinaProxy
 DOMAIN-SUFFIX,ztgame.com,ChinaProxy
